@startuml

title __LINNIK_LR53's Class Diagram__\n

  namespace pattern {
    class pattern.Main {
    }
  }
  

  namespace pattern {
    abstract class pattern.Middleware {
    }
  }
  

  namespace pattern {
    class pattern.RoleCheckMiddleware {
    }
  }
  

  namespace pattern {
    class pattern.Server {
    }
  }
  

  namespace pattern {
    class pattern.ThrottlingMiddleware {
    }
  }
  

  namespace pattern {
    class pattern.UserExistsMiddleware {
    }
  }
  

  pattern.Middleware o-- pattern.Middleware : next
  pattern.RoleCheckMiddleware -up-|> pattern.Middleware
  pattern.Server o-- pattern.Middleware : middleware
  pattern.ThrottlingMiddleware -up-|> pattern.Middleware
  pattern.UserExistsMiddleware -up-|> pattern.Middleware
  pattern.UserExistsMiddleware o-- pattern.Server : server


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
